[package]
name = "ctlwatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"]}
futures-util = "0.3"
futures-channel = "0.3"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
