[package]
name = "ctlwatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"]}
futures-util = "0.3"
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1"
